--- a/style.css
+++ b/style.css
@@ -38,29 +38,21 @@ body{
 }
 
 
-.mandala {
+.mandala img {
     animation-name: mandala;
-    animation-duration: 8s;
+    animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-direction: alternate;
   }
   
-  .hello{
-      width: 60%;
-      margin-bottom: 1rem;
-  }
-
-  .hello img{
-      width: 100%;
-  }
   @keyframes mandala {
     from {
-        transform: rotate(0deg);
+        /* transform: rotate(0deg); */
         opacity: 0;
     }
     to {
-        transform: rotate(359deg);
+        /* transform: rotate(359deg); */
         opacity: 1;
     }
   }
@@ -68,11 +60,11 @@ body{
 @media (min-width: 768px) {
     
     .forMen{
-        width: 40%;
+        width: 50%;
     }
         
     .container{
-        width: 40%;
+        width: 50%;
     }
 
   }
